<resources>
    <string name="nome_app">Peladeiro Digital</string>
    <string name="titulo_tela_torneio">Nome do Torneio</string>
    <string name="titulo_tela_equipe">Nome da Equipe</string>
    <string name="titulo_pricipal">Gerenciador de Torneios</string>
    <string name="btn_confirmar">OK!</string>
    <string name="btn_adicionar">Adicionar</string>
    <string name="btn_editar">Editar</string>
    <string name="btn_cancelar">Cancelar</string>
    <string name="btn_individual">Individualmente</string>
    <string name="btn_aleatorio">Aleatoriamente</string>
    <string name="btn_sortear">Sortear!</string>
    <string name="btn_partida_encerrada">Partida Encerrada</string>
    <string name="btn_desempate_mandante">Mandante</string>
    <string name="btn_desempate_visitante">Visitante</string>
    <string name="santuario_torneios_recentes">Torneios recentes: </string>
    <string name="santuario_gerenciados_cheio">Limite alcançado</string>
    <string name="santuario_gerenciados_vazio">Sem torneios recentes
        \nAdicione novos a partir do botão novo</string>
    <string name="santuario_seguidos_vazio">Os torneios seguidos aparecerão aqui.</string>
    <string name="santuario_buscados_vazio">Sem torneios com esse nome.</string>
    <string name="santuario_buscados_encontrados">Torneios encontrados: </string>
    <string name="titulo_alerta_confir_excluir_torneio">Excluindo Torneio</string>
    <string name="titulo_alerta_confir_follow_torneio">Acompanhar Torneio</string>
    <string name="titulo_alerta_confir_unfollow_torneio">Não acompanhar Torneio</string>
    <string name="titulo_alerta_sorteio_pelada">Escalando jogadores…</string>
    <string name="titulo_alerta_novo_mesario_torneio">Cadastra mesário</string>
    <string name="titulo_alerta_loading_torneio_remoto">Buscando torneio…</string>
    <string name="msg_alerta_confir_excluir_torneio">Deseja excluir esse Torneio?</string>
    <string name="msg_alerta_confir_follow_torneio">Deseja seguir esse Torneio?</string>
    <string name="msg_alerta_confir_unfollow_torneio">Deixar de seguir esse Torneio?</string>
    <string name="msg_alerta_confir_novo_mesario_torneio">Confirmar este usuário como um mesário do torneio?</string>
    <string name="msg_alerta_erro_novo_mesario_torneio">Não foi possível adicionar este mesário.\nNúmero máximo de mesários atingido.</string>
    <string name="msg_alerta_erro_novo_mesario_torneio_existente">Este mesário já é gerenciador desse torneio.</string>
    <string name="msg_alerta_erro_novo_mesario_torneio_nao_encontrado">Mesário não encontrado.</string>
    <string name="torneio_cheio">Torneio cheio.</string>
    <string name="torneio_fechado">Torneio fechado.</string>
    <string name="torneio_com_equipes">Equipes participantes: </string>
    <string name="torneio_sem_equipes">Adicione equipes com o botão abaixo (+)</string>
    <string name="lbl_btn_tabela_desabled">Número insuficiente de times</string>
    <string name="lbl_btn_tabela_fechar">Fechar torneio/gerar tabela</string>
    <string name="lbl_btn_tabela_visualizar">Visualizar Tabela</string>
    <string name="novo_torneio">Meu Torneio</string>
    <string name="estado_fechado">Fechado.</string>
    <string name="estado_aberto">Aberto.</string>
    <string name="estado_encerrado">Encerrado.</string>
    <string name="lbl_estado_torneio">Estado do torneio: </string>
    <string-array name="torneio_status">
        <item>Aberto</item>
        <item>Fechado</item>
        <item>Finalizado</item>
    </string-array>
    <string name="sucesso_adicionar_equipe">Equipe adicionada com sucesso!</string>
    <string name="erro_adicionar_equipe">Não foi possível adicionar equipe!</string>
    <string name="erro_excluir_equipe">Não foi possível excluir esta equipe!</string>
    <string name="equipe_sigla_partida_aberta"> </string>
    <string name="equipe_ponto_partida_aberta">-</string>
    <string name="equipe_nome_padrao_mandante">Colete Azul F.C.</string>
    <string name="equipe_nome_padrao_visitante">Colete Verde F.C.</string>
    <string name="dica_sigla_equipe">CBF</string>
    <string name="lbl_sigla_equipe">SIGLA:</string>
    <string name="lbl_nome_equipe">Nome: </string>
    <string name="dica_nome_equipe">Clube Esportivo Exemplo</string>
    <string name="lbl_quant_jogadores">Quantidade de atletas</string>
    <string name="titulo_alerta_nova_equipe">Informações da equipe</string>
    <string name="titulo_alerta_impedir_adicao_nova_equipe">Adição não disponível</string>
    <string name="titulo_alerta_impedir_exclusao_de_equipe">Exclusão não disponível</string>
    <string name="titulo_alerta_equipe_vazia">Equipe sem plantel</string>
    <string name="titulo_alerta_confir_abrir_equipe">Abrindo Equipe</string>
    <string name="titulo_alerta_confir_excluir_equipe">Excluindo Equipe</string>
    <string name="msg_alerta_confir_abrir_equipe">Deseja editar essa equipe?</string>
    <string name="msg_alerta_impedir_adicao_nova_equipe">Não é possível adicionar novas equipes.
    \nTorneio fechado ou limite de equipes alcançado.</string>
    <string name="msg_alerta_impedir_exclusao_de_equipe">Não é possível excluir esta equipe.
    \nTorneio fechado ou finalizado.</string>
    <string name="msg_alerta_confir_excluir_equipe">Deseja excluir essa equipe?</string>
    <string name="msg_alerta_erro_excluir_equipe">A equipe não pode ser excluída!</string>
    <string name="msg_alerta_erro_sigla_usada">A sigla usada pertence a outra equipe.</string>
    <string name="msg_alerta_warning_sigla">
        A sigla é gerada automaticamente, mas você pode inserí-la manualmente, desde que não seja
        curta ou igual a sigla das outras equipes.
    </string>
    <string name="equipe_com_jogador">Jogadores inscritos:</string>
    <string name="equipe_sem_jogador">Adicione novos usando o botão abaixo.</string>
    <string name="jogador_adicionado">Jogador adicionado com sucesso!</string>
    <string name="jogador_editado">Jogador editado com sucesso!</string>
    <string name="jogador_erro_adicionar">Erro ao adicionar jogador!</string>
    <string name="lbl_posicao">Posição</string>
    <string name="lbl_numero">Número</string>
    <string name="lbl_nome_jogador">Nome</string>
    <string name="dica_nome_jogador">Ex: Almir Rogério</string>
    <string name="titulo_alerta_novo_jogador">Contratar jogador</string>
    <string name="titulo_alerta_editar_jogador">Ficha técnica do jogador</string>
    <string name="titulo_alerta_confir_abrir_jogador">Editar jogador</string>
    <string name="titulo_alerta_confir_excluir_jogador">Dispensar jogador</string>
    <string name="msg_alerta_confir_excluir_jogador">Deseja rescindir o contrato com esse jogador?</string>
    <string name="msg_alerta_erro_excluir_jogador">Uma cláusula impediu a rescisão do contrato com o jogador!</string>
    <string name="msg_alerta_sucesso_excluir_jogador">Contrato rescindido!</string>
    <string name="titulo_ficha_tec_jogador">Ficha técnica na partida</string>
    <string name="pontos_ficha_tec_jogador">Pontos na partida:</string>
    <string name="gols_ficha_tec_jogador">Gols na partida:</string>
    <string name="gols_contra_ficha_tec_jogador">Gols contra:</string>
    <string name="faltas_ficha_tec_jogador">Faltas na partida:</string>
    <string name="cartoes_ficha_tec_jogador">Cartões na partida:</string>
    <string-array name="posicoes_jogador">
        <item>GLK - Goleiro</item>
        <item>DEF - Defensor</item>
        <item>MID - Meio</item>
        <item>PIV - Pivô</item>
        <item>ATK - Atacante</item>
        <item>LIB - Líbero</item>
        <item>LEV - Levantador</item>
        <item>POT - Ponta</item>
        <item>ARM - Armador</item>
        <item>ALA - Ala</item>
    </string-array>
    <string-array name="partida_nomes">
        <item>Simulação</item>
        <item>Grande Final</item>
        <item>Semifinal-Jogo #1</item>
        <item>Semifinal-jogo #2</item>
        <item>Quartas-Jogo #1</item>
        <item>Quartas-Jogo #2</item>
        <item>Quartas-Jogo #3</item>
        <item>Quartas-Jogo #4</item>
        <item>Oitavas-Jogo #1</item>
        <item>Oitavas-Jogo #2</item>
        <item>Oitavas-Jogo #3</item>
        <item>Oitavas-Jogo #4</item>
        <item>Oitavas-Jogo #5</item>
        <item>Oitavas-Jogo #6</item>
        <item>Oitavas-Jogo #7</item>
        <item>Oitavas-Jogo #8</item>
    </string-array>
    <string name="simular_partida">Simular Pelada</string>
    <string name="nome_partida">Oitavas-Jogo #1</string>
    <string name="partida_score_gols">Gols:</string>
    <string name="partida_score_pontos">Pontos:</string>
    <string name="partida_score_falta">Faltas:</string>
    <string name="partida_acao_ponto">Ponto</string>
    <string name="partida_acao_gol">Gol (pró &amp; contra)</string>
    <string name="partida_acao_falta">Falta</string>
    <string name="partida_acao_cartao">Cartões</string>
    <string name="titulo_alerta_confir_abrir_partida">Abrindo Partida</string>
    <string name="titulo_alerta_confir_finalizar_partida">Encerrar Partida</string>
    <string name="titulo_alerta_confir_finalizar_pelada">Encerrar Pelada</string>
    <string name="titulo_alerta_confir_abrir_desempate">Iniciar Desempate</string>
    <string name="titulo_alerta_partida_equipes_incompletas">Equipes incompletas</string>
    <string name="titulo_alerta_partida_acao_jogador">Ação do Jogador</string>
    <string name="titulo_alerta_partida_detalhes_jogador">Detalhes do jogador</string>
    <string name="titulo_alerta_partida_sorteio_jogadores">Lista de Convocados</string>
    <string name="titulo_alerta_partida_desempate">Pênaltis</string>
    <string name="titulo_alerta_partida_campeao">Vitória!</string>
    <string name="lbl_vs_padrao">Vs.</string>
    <string name="lbl_msg_inicio_aberta">Deseja iniciar partida: </string>
    <string name="lbl_msg_inicio_finalizada">Rever os dados da partida: </string>
    <string name="lbl_msg_inicio_desempate">Deseja iniciar o módulo de desempate? </string>
    <string name="lbl_msg_finalizar_partida">Deseja finalizar a partida </string>
    <string name="lbl_msg_finalizar_pelada">Deseja finalizar a pelada </string>
    <string name="lbl_msg_partida_empatada">A partida terminou empatada! </string>
    <string name="dica_info_login">
        Faça login para manter seus dados salvos.\n
        Mas se preferir, você ainda pode simular peladas com o botão abaixo (modo offline).
    </string>
    <string name="btn_login">ENTRAR</string>
    <string name="dica_email">E-mail</string>
    <string name="dica_senha">Senha</string>
    <string name="dica_ou">ou</string>
    <string name="titulo_cadastro">Cadastro para o modo online</string>
    <string name="dica_sede_padrao">Cidade sede dos torneios</string>
    <string name="btn_cadastrar">CADASTRAR</string>
    <string name="dica_info_cadastro">
        Para ter acesso ao modo online, cadastre-se preenchendo os campos abaixo.\n
        O nome do usuário deve ser único.\n
        Para conta Google apenas o nome do usuário é necessário.\n
        Mantenha a localização do dispositivo ligada.
    </string>
    <string name="descricao_imagem_trofeu">Troféu dourado de campeão com uma placa e alças</string>
    <string name="descricao_btn_gol_pro">Bola de futebol verde</string>
    <string name="descricao_btn_falta">Apito preto</string>
    <string name="descricao_btn_cartao_amarelo">Cartão amarelo</string>
    <string name="descricao_btn_cartao_vermelho">Cartão vermelho</string>
    <string name="erro_torneio_sem_estatistica">Torneio ainda aberto!\nAguardando por estatísticas…</string>
    <string name="erro_torneio_sem_estatistica_especifica">Aguardando dados para gerar estatísticas…</string>
    <string name="saldacoes_equipe_campea">Parabéns por ser o Campeão!</string>
</resources>