<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background_soft"
    tools:context=".MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/titulo_pricipal"
            android:textSize="20dp"
            android:layout_margin="40dp"
            android:textAlignment="center"
            />
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dica_info_login"
        android:textSize="16dp" />
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:shrinkColumns="*"
        android:stretchColumns="*"
        android:padding="20dp">
        <TableRow
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_gravity="center_horizontal">

            <EditText
                android:id="@+id/etx_email"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:maxLength="35"
                android:hint="@string/dica_email"
                android:singleLine="true"
                android:inputType="text"/>
        </TableRow>
        <TableRow
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_gravity="center_horizontal">

            <EditText
                android:id="@+id/etx_senha"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:maxLength="35"
                android:hint="@string/dica_senha"
                android:singleLine="true"
                android:inputType="textPassword"/>
        </TableRow>
        <TableRow
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_gravity="center_horizontal">

            <Button
                android:id="@+id/btn_login_padrao"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@drawable/button_shape_desabled"
                android:enabled="false"
                android:shadowColor="#3D3D3D"
                android:shadowDx="0"
                android:shadowDy="0"
                android:shadowRadius="5"
                android:text="@string/btn_login"
                android:textColor="@color/btn_texto_ic"
                android:textSize="20sp"
                />
        </TableRow>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dica_ou"
            android:textSize="18dp" />
        <com.google.android.gms.common.SignInButton
            android:id="@+id/btn_login_google"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:padding="10dp"
        />

    </TableLayout>


    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/btn_simulador_tela_login"
            android:text="@string/simular_partida"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:layout_weight="1"
            android:layout_marginBottom="5dp"
            android:background="@drawable/button_shape_enabled"
            android:shadowColor="#3D3D3D"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="5"
            android:textColor="@color/btn_texto_ic"
            android:textSize="18sp"
            />
    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</LinearLayout>
