<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:divider="?android:attr/listDivider"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/lbl_nome_jogador"
        android:textSize="20dp" />

    <EditText
        android:id="@+id/etx_nome_novo_jogador"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_nome_jogador"
        android:maxLength="35"
        android:padding="@dimen/fab_margin"
        android:singleLine="true" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/fab_margin"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="2dp"
            android:layout_marginRight="8dp"
            android:text="@string/lbl_posicao" />

        <Spinner
            android:id="@+id/spr_pos_novo_jogador"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbarSize="4dp"
            android:textAlignment="center"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/fab_margin"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="2dp"
            android:layout_marginRight="8dp"
            android:text="@string/lbl_numero" />

        <Spinner
            android:id="@+id/spr_num_novo_jogador"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="50dp"
            android:scrollbarSize="4dp"
            android:spinnerMode="dialog"
            android:textAlignment="center"/>
    </LinearLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="10dp"
        android:shrinkColumns="*"
        android:stretchColumns="*">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center">

            <Button
                android:id="@+id/btn_confirmar_jogador"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@drawable/button_shape_desabled"
                android:enabled="false"
                android:shadowColor="#3D3D3D"
                android:shadowDx="0"
                android:shadowDy="0"
                android:shadowRadius="5"
                android:text="@string/btn_adicionar"
                android:textColor="#FFFFFF"
                android:textSize="16sp" />

            <Button
                android:id="@+id/btn_cancelar_jogador"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@drawable/button_shape_enabled"
                android:shadowColor="#3D3D3D"
                android:shadowDx="0"
                android:shadowDy="0"
                android:shadowRadius="5"
                android:text="@string/btn_cancelar"
                android:textColor="#FFFFFF"
                android:textSize="16sp" />
        </TableRow>
    </TableLayout>
</LinearLayout>