<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background_soft"
    tools:context=".MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/titulo_cadastro"
            android:textSize="20dp"
            android:layout_margin="@dimen/titulo_principal_margin"
            android:textAlignment="center"
            />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/dica_info_cadastro"
        android:textSize="16dp" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:shrinkColumns="*"
        android:stretchColumns="*"
        android:padding="20dp">
        <TableRow
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_gravity="center_horizontal">

            <EditText
                android:id="@+id/etx_apelidio"
                android:drawableStart="@drawable/ic_user"
                android:autofillHints="no"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:maxLength="35"
                android:hint="@string/dica_apelidio"
                android:singleLine="true"
                android:inputType="text"/>
        </TableRow>
        <TableRow
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_gravity="center_horizontal">

            <EditText
                android:id="@+id/etx_email_cadastro"
                android:drawableStart="@drawable/ic_email"
                android:autofillHints="no"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:maxLength="35"
                android:hint="@string/dica_email"
                android:singleLine="true"
                android:inputType="textEmailAddress"/>
        </TableRow>
        <TableRow
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_gravity="center_horizontal">

            <EditText
                android:id="@+id/etx_senha_cadastro"
                android:drawableStart="@drawable/ic_password"
                android:autofillHints="no"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:maxLength="35"
                android:hint="@string/dica_senha"
                android:singleLine="true"
                android:inputType="textPassword"/>
        </TableRow>
        <TableRow
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_gravity="center_horizontal">

            <EditText
                android:id="@+id/etx_sede"
                android:drawableStart="@drawable/ic_location"
                android:focusable="false"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:layout_weight="2"
                android:maxLength="35"
                android:hint="@string/dica_sede_padrao"
                android:singleLine="true"
                android:inputType="textPassword"
                android:autofillHints="no"/>
        </TableRow>

        <TableRow
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_gravity="center_horizontal">
            <Button
                android:id="@+id/btn_cadastrar_padrao"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@drawable/button_shape_enabled"
                android:enabled="true"
                android:shadowColor="#3D3D3D"
                android:shadowDx="0"
                android:shadowDy="0"
                android:shadowRadius="5"
                android:text="@string/btn_cadastrar"
                android:textColor="@color/btn_texto_ic"
                android:textSize="20sp"
                />
        </TableRow>
    </TableLayout>
    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
</LinearLayout>
